# bayesian_optimization

./: Cargo.toml  README.md
src/: bfgs.rs  main.rs  normal.rs  util.rs
