[package]
name = "bayesian_optimization"
version = "0.1.0"
authors = ["llenotre <llenotre@student.42.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.leonhard]
git = "https://github.com/llenotre/leonhard"
